功能(后端): 接入大模型AI对话与行程规划MVP